--- a/css/general.css
+++ b/css/general.css
@@ -160,7 +160,7 @@ br {
   width: 356px;
   box-sizing: border-box;
   margin-right: 15px;
-  margin-left: 100px;
+  margin-left: 20px;
 }
 
 .display > input {
@@ -265,12 +265,12 @@ br {
 }
 
 .register-buttons--container {
-  margin-left: 660px;
+  margin-left: 550px;
   display: flex;
   flex-direction: row;
   background-color: white;
   z-index: -1;
-  width: 60%;
+  width: 67%;
   box-sizing: border-box;
 }
 
@@ -290,10 +290,10 @@ br {
 .extra-button {
   display: block;
   cursor: pointer;
-  height: 75px;
-  width: 150px;
+  height: 60px;
+  width: 130px;
 
-  margin-bottom: 10px;
+  margin: 5px 7px;
   background-color: rgba(0, 0, 0, 0.7);
   border-radius: 3px;
   box-sizing: border-box;
@@ -357,8 +357,8 @@ br {
 
 .registers--container {
   display: flex;
-  width: 38%;
-  flex-direction: row;
+  width: 33%;
+  flex-direction: column;
   z-index: 10;
   position: absolute;
   left: 0;
@@ -372,7 +372,7 @@ br {
 
 .register {
   display: block;
-  padding: 1.2em 0.7em;
+
   background-color: black;
   margin: 0;
   border-bottom: 1px solid rgba(0, 0, 0, 20%);
@@ -387,7 +387,7 @@ br {
 
 .register.half {
   border-right: 1px solid rgba(0, 0, 0, 20%);
-  width: 30%;
+  width: 10%;
 }
 
 .register.half:nth-child(3n + 2) {
@@ -395,7 +395,7 @@ br {
 }
 
 .register.full {
-  width: 60%;
+  width: 15%;
 }
 
 .register.full:last-child {
@@ -421,7 +421,7 @@ br {
   display: none;
   border-right: 1px solid rgba(0, 0, 0, 0.1);
   margin-left: -0.58em;
-  padding: 0 0.55em;
+
   position: relative;
 }
 
